k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: djangotestproject
  namespace: staging
  labels:
    app: djangotestproject
    environment: staging
spec:
  type: ClusterIP
  selector:
    app: djangotestproject
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
